[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/camera/juicy_cam.gd" type="Script" id=1]
[ext_resource path="res://scenes/camera/camera.gd" type="Script" id=2]
[ext_resource path="res://scenes/camera/CrosshairContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/camera/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/prefabs/ak47/ak47.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/prefabs/hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/particles/spatial_pqueue.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/particles/hit.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/particles/cloud.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particles/sprite.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/particles/damage_number.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Gun Sounds/hits1/hit3.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/Gun Sounds/hits1/hit1.ogg" type="AudioStream" id=17]

[sub_resource type="OpenSimplexNoise" id=1]
period = 32.0

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.420448, 0.450625 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 3.0344, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SphereMesh" id=4]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[node name="cam_container" type="Spatial"]
script = ExtResource( 2 )

[node name="juicy_cam" type="Camera" parent="."]
transform = Transform( 1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0, 0 )
current = true
fov = 90.0
far = 300.0
script = ExtResource( 1 )
noise = SubResource( 1 )
max_r = 2
decay = 0.8

[node name="UILayer" type="CanvasLayer" parent="juicy_cam"]
follow_viewport_enable = true

[node name="CenterContainer" parent="juicy_cam/UILayer" instance=ExtResource( 3 )]

[node name="gui" parent="juicy_cam/UILayer" instance=ExtResource( 6 )]

[node name="fader" type="ColorRect" parent="juicy_cam/UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="juicy_cam/UILayer/fader"]
anims/fade_in = SubResource( 2 )

[node name="PauseMenu" parent="juicy_cam/UILayer" instance=ExtResource( 4 )]

[node name="gun" parent="juicy_cam" instance=ExtResource( 5 )]
transform = Transform( -0.0118058, 0.00042665, 0.0485844, 0.00210992, 0.0499554, 7.4012e-05, -0.0485405, 0.00206766, -0.0118133, 1.47358, -0.844503, -1.68106 )
spread_curve = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="juicy_cam"]
cast_to = Vector3( 0, 0, -100 )
collision_mask = 2
collide_with_areas = true

[node name="DebugHitDetector" type="MeshInstance" parent="juicy_cam/RayCast"]
transform = Transform( 1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 0, 1, 0, 0, 0 )
layers = 0
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="spatial_pqueue" parent="juicy_cam/RayCast/DebugHitDetector" instance=ExtResource( 7 )]
particle = ExtResource( 8 )
queue_count = 16

[node name="spatial_pqueue_cloud" parent="juicy_cam/RayCast/DebugHitDetector" instance=ExtResource( 7 )]
particle = ExtResource( 9 )
queue_count = 16

[node name="spatial_pqueue_sprite" parent="juicy_cam/RayCast/DebugHitDetector" instance=ExtResource( 7 )]
particle = ExtResource( 13 )
queue_count = 16

[node name="spatial_pqueue_num" parent="juicy_cam/RayCast/DebugHitDetector" instance=ExtResource( 7 )]
particle = ExtResource( 14 )
queue_count = 16

[node name="AudioHit" type="AudioStreamPlayer3D" parent="juicy_cam/RayCast/DebugHitDetector"]
stream = ExtResource( 15 )
unit_db = 50.0
max_db = -5.0
max_distance = 250.0
bus = "Sfx"

[node name="AudioCrit" type="AudioStreamPlayer3D" parent="juicy_cam/RayCast/DebugHitDetector"]
stream = ExtResource( 15 )
unit_db = 50.0
max_db = -3.0
pitch_scale = 2.0
max_distance = 250.0
bus = "Sfx"

[node name="AudioDud" type="AudioStreamPlayer3D" parent="juicy_cam/RayCast/DebugHitDetector"]
stream = ExtResource( 17 )
unit_db = 50.0
max_db = -5.0
max_distance = 250.0
bus = "Sfx"

[connection signal="change_ammo_type" from="juicy_cam/gun" to="juicy_cam/UILayer/gui" method="_on_gun_change_ammo_type"]
[connection signal="fired" from="juicy_cam/gun" to="." method="_on_gun_fired"]
[connection signal="new_ammo" from="juicy_cam/gun" to="juicy_cam/UILayer/gui" method="_on_gun_new_ammo"]
[connection signal="reload" from="juicy_cam/gun" to="juicy_cam/UILayer/gui" method="_on_gun_reload"]
[connection signal="spread" from="juicy_cam/gun" to="juicy_cam/UILayer/CenterContainer" method="apply_spread"]
[connection signal="update_ammo" from="juicy_cam/gun" to="juicy_cam/UILayer/gui" method="_on_gun_update_ammo"]
